[package]
name = "cab403-rs"
version = "0.1.0"
authors = ["Shaun Karran <shaun.karran@gmail.com>"]

[lib]
name = "threadpool"
path = "src/threadpool/lib.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
log = "0.3.0"
simplelog = "0.4.2"

[dependencies.clap]
version = "2.26.2"
features = ["yaml"]
